UpperBg Done :octocat:

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,4 +19,13 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .bg-blend-luminosity {
+    background-blend-mode: luminosity;
+  }
+}
+
+.upperNavBg {
+  background-image: url('../assets/upperNav/upperNav.png');
+  background-size: cover;
 }
