--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,3 +3,11 @@
   margin: 0;
   padding: 0;
 }
+
+/* upper nav start */
+.upperNavBg {
+  background-image: url('../assets/upperNav/upperNav.png');
+  background-size: cover;
+}
+
+/* upper nav end */
