--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,6 +7,8 @@
 :root {
   --white: '#ffffff';
   --black: '#000000';
+  --headingForeground: '#1F2328';
+  --lightGray: 'rgb(102, 112, 127)';
 
   --fontPrimary: "Golos Text", sans-serif;
   --fontSecondary: "Onest", sans-serif;
