--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,6 +4,27 @@
   padding: 0;
 }
 
+/* banner start */
+.banner-bg {
+  background: linear-gradient(120deg, #70acd4 0%, #ca71ff 20%, #8469cc 30%, #4882e6 50%, #8469cc 70%, #70acd4 100%);
+  background-size: 200% 200%;
+  animation: gradient-animation 20s ease-in-out alternate infinite
+}
+
+.dot {
+  display: inline-block;
+  width: .25rem;
+  height: .25rem;
+  margin-left: .25rem;
+  margin-right: .25rem;
+  vertical-align: middle;
+  background-color: currentColor;
+  border-radius: 1em;
+  opacity: .4
+}
+
+/* banner end */
+
 /* upper nav start */
 .upperNavBg {
   background-image: url('../assets/upperNav/upperNav.png');
