--- a/src/style/index.css
+++ b/src/style/index.css
@@ -22,6 +22,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*,
+:before,
+:after {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: #e5e7eb
+}
+
+:before,
+:after {
+  --tw-content: ""
+}
+
 h1,
 h2,
 h3,
