Few Style Added

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -32,3 +32,11 @@
 }
 
 /* upper nav end */
+
+/* future ai start */
+.lqd-is-active {
+  --tw-shadow: 0 15px 33px rgb(0 0 0 / 5%);
+  --tw-shadow-colored: 0 15px 33px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+/* future ai end */
