--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,6 +4,14 @@
   padding: 0;
 }
 
+.font-heading {
+  font-family: Onest, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+}
+
+.font-body {
+  font-family: Golos Text, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji"
+}
+
 /* banner start */
 .banner-bg {
   background: linear-gradient(120deg, #70acd4 0%, #ca71ff 20%, #8469cc 30%, #4882e6 50%, #8469cc 70%, #70acd4 100%);
